// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VideoBodyView > matches snapshot for error story 1`] = `
<div>
  <span
    class="VideoBodyView-module_root VideoBodyView-module_error"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V4q0-.824.588-1.412A1.93 1.93 0 0 1 6 2h7.175a1.98 1.98 0 0 1 1.4.575l4.85 4.85q.275.275.425.638.15.361.15.762v3.516A6 6 0 0 0 18 12V9h-4a.97.97 0 0 1-.713-.287A.97.97 0 0 1 13 8V4H6v16h6.341c.264.745.67 1.423 1.187 2z"
      />
      <path
        d="M18 14a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1m-1 7a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
      />
    </svg>
    Error decrypting video
  </span>
</div>
`;

exports[`VideoBodyView > matches snapshot for hidden story 1`] = `
<div>
  <span
    class="VideoBodyView-module_root"
  >
    <div
      class="VideoBodyView-module_container"
      style="width: min(100%, 320px); max-width: 320px; max-height: 180px; aspect-ratio: 16 / 9;"
    >
      <button
        class="VideoBodyView-module_hiddenButton"
        type="button"
      >
        <div
          class="VideoBodyView-module_hiddenButtonContent"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 16q1.875 0 3.188-1.312Q16.5 13.375 16.5 11.5t-1.312-3.187T12 7 8.813 8.313 7.5 11.5t1.313 3.188T12 16m0-1.8q-1.125 0-1.912-.787A2.6 2.6 0 0 1 9.3 11.5q0-1.125.787-1.912A2.6 2.6 0 0 1 12 8.8q1.125 0 1.912.787.788.788.788 1.913t-.787 1.912A2.6 2.6 0 0 1 12 14.2m0 4.8q-3.475 0-6.35-1.837Q2.775 15.324 1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.775.8.8 0 0 1 .1-.313q1.475-3.125 4.35-4.962Q8.525 4 12 4t6.35 1.838T22.7 10.8a.8.8 0 0 1 .1.313 3 3 0 0 1 0 .774.8.8 0 0 1-.1.313q-1.475 3.125-4.35 4.963Q15.475 19 12 19m0-2a9.54 9.54 0 0 0 5.188-1.488A9.77 9.77 0 0 0 20.8 11.5a9.77 9.77 0 0 0-3.613-4.012A9.54 9.54 0 0 0 12 6a9.55 9.55 0 0 0-5.187 1.487A9.77 9.77 0 0 0 3.2 11.5a9.77 9.77 0 0 0 3.613 4.012A9.54 9.54 0 0 0 12 17"
            />
          </svg>
          <span>
            Show video
          </span>
        </div>
      </button>
    </div>
  </span>
</div>
`;

exports[`VideoBodyView > matches snapshot for ready story 1`] = `
<div>
  <span
    class="VideoBodyView-module_root"
  >
    <div
      class="VideoBodyView-module_container"
      data-video-body-mask-target=""
      style="width: min(100%, 320px); max-width: 320px; max-height: 180px; aspect-ratio: 16 / 9;"
    >
      <video
        aria-label="Product demo video"
        class="VideoBodyView-module_video"
        controls=""
        controlslist="nodownload"
        crossorigin="anonymous"
        poster="/static/element.png"
        preload="none"
        src="http://localhost:63315/static/videoBodyDemo.webm"
      />
    </div>
    <div>
      File body slot
    </div>
  </span>
</div>
`;
